# blaze-ctl

./: .gitignore  README.md  build_docker.sh  cluster_cmd.md  configs_table.sql  current_AWSNodeTemplate_us_labs_worker.yaml  current_provisioner_us_labs_worker.yaml  generate_cmd_docs.sh  generate_docs.py  main.py  pyproject.toml
blazectl/: __main__.py  cli.py  main.py
blazectl/cli/: cluster_cli.py  job_cli.py  main_cli.py  namespace_cli.py  workers_cli.py
blazectl/cluster/: aws_instance_types.json  cli.py  cluster.py
blazectl/commons/: configuration.py  manage_base.py  utils.py
blazectl/job/: cli.py  job.py
blazectl/kube/: README.md  apply_mysql.sh  install-additional-dependencies.sh  mysql.yaml
blazectl/kube/airflow/: airflow_git_sync_secret.yaml  airflow_overwrite.yaml  install_airflow.sh  override.yaml
blazectl/kube/mysql/: 1_configmap.yaml  2_backup_policy.yaml
blazectl/namespace/: cli.py  config.py  control_apps_airflow_roles.yaml  default_user_roles.yaml  fsx_volume.py  namespace.py  provisioner.py  roles.yaml  service_account.py  user-delete.sh  user.sh
docker/: Dockerfile
docker/config/: config.json
docker/scripts/: submit_job.sh
docs/: commands.md  job_cmd.md  ns_cmd.md  workers_cmd.md
kube/: karpenter_default_provisioner.yaml
kube/airflow/: airflow-values.yaml  airflow_git_sync_secret.yaml
kube/mysql/: 3_mysql_cluster.yaml
tests/: test_blaze_ctl.py
