[tool.poetry]
name = "ray-kube-ctl"
version = "0.1.0"
description = ""
authors = ["Shailendra Sharma <shailendra.sharma@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.6.1"}
rich = "^12.6.0"
shellingham = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
